--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -44,7 +44,7 @@ div.average-rating {
   width: $main;
   margin: 0 auto;
   min-height: 200px;
-  padding-top: 10px;
+  padding-top: 40px;
   padding-bottom: 50px;
   border-top: 1px solid #2f2b31;
   color: #999;
